--- a/popup.html
+++ b/popup.html
@@ -1,197 +1,233 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>LinkedIn Job Filter</title>
-  <style>
-    body {
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-      padding: 20px;
-      width: 350px;
-      background: #ffffff;
-      color: #1a1a1a;
-    }
-    h2 {
-      font-size: 18px;
-      margin-bottom: 15px;
-      color: #0a66c2;
-      font-weight: 600;
-    }
-    .search-container {
-      margin-bottom: 15px;
-    }
-    input[type="text"], select {
-      width: 100%;
-      padding: 10px;
-      margin-bottom: 15px;
-      border: 1px solid #e0e0e0;
-      border-radius: 8px;
-      font-size: 14px;
-      box-sizing: border-box;
-      transition: border-color 0.3s;
-    }
-    input[type="text"]:focus, select:focus {
-      outline: none;
-      border-color: #0a66c2;
-      box-shadow: 0 0 0 2px rgba(10, 102, 194, 0.1);
-    }
-    .options-section {
-      margin-bottom: 15px;
-    }
-    .options-title {
-      font-size: 14px;
-      font-weight: 500;
-      margin-bottom: 8px;
-      color: #666;
-    }
-    .radio-group, .checkbox-group {
-      display: grid;
-      gap: 8px;
-      margin-bottom: 15px;
-    }
-    .location-group {
-      display: grid;
-      grid-template-columns: 2fr 1fr;
-      gap: 10px;
-      margin-bottom: 15px;
-    }
-    label {
-      display: flex;
-      align-items: center;
-      font-size: 14px;
-      cursor: pointer;
-      padding: 6px;
-      border-radius: 6px;
-      transition: background-color 0.2s;
-    }
-    label:hover {
-      background-color: #f5f7fa;
-    }
-    input[type="radio"], input[type="checkbox"] {
-      margin-right: 8px;
-    }
-    .checkbox-label {
-      user-select: none;
-    }
-    button {
-      width: 100%;
-      padding: 10px;
-      background-color: #0a66c2;
-      color: white;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      font-size: 14px;
-      font-weight: 600;
-      transition: background-color 0.2s;
-    }
-    button:hover {
-      background-color: #004182;
-    }
-    .collapsible {
-      cursor: pointer;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 8px;
-      border-radius: 6px;
-      margin-bottom: 8px;
-      background-color: #f5f7fa;
-    }
-    .collapsible:hover {
-      background-color: #e8f0fe;
-    }
-    .collapsible-content {
-      display: none;
-      padding: 8px;
-    }
-    .collapsible-content.active {
-      display: block;
-    }
-    .expand-icon {
-      font-size: 12px;
-      transition: transform 0.3s;
-    }
-    .collapsible.active .expand-icon {
-      transform: rotate(180deg);
-    }
-  </style>
-</head>
-<body>
-  <h2>LinkedIn Job Filter</h2>
-  
-  <div class="search-container">
-    <input type="text" id="jobTitle" placeholder="Enter job title" />
-  </div>
 
-  <div class="options-section">
-    <div class="options-title">Location</div>
-    <div class="location-group">
-      <input type="text" id="location" placeholder="City, State, or Country" />
-      <select id="radius">
-        <option value="10">10mi</option>
-        <option value="25" selected>25mi</option>
-        <option value="50">50mi</option>
-        <option value="100">100mi</option>
-      </select>
+  <head>
+    <title>LinkedIn Job Filter</title>
+    <style>
+      body {
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+        padding: 20px;
+        width: 350px;
+        background: #f9fafb;
+        color: #2c2c2c;
+      }
+
+      h2 {
+        font-size: 18px;
+        margin-bottom: 15px;
+        color: #0073b1;
+        font-weight: 600;
+      }
+
+      .search-container {
+        margin-bottom: 15px;
+      }
+
+      input[type="text"],
+      select {
+        width: 100%;
+        padding: 10px;
+        margin-bottom: 15px;
+        border: 1px solid #e0e3e7;
+        border-radius: 8px;
+        font-size: 14px;
+        box-sizing: border-box;
+        transition: border-color 0.3s;
+        background-color: #f7f9fc;
+        color: #2c2c2c;
+      }
+
+      input[type="text"]:focus,
+      select:focus {
+        outline: none;
+        border-color: #66afe9;
+        box-shadow: 0 0 0 2px rgba(102, 175, 233, 0.2);
+      }
+
+      .options-section {
+        margin-bottom: 15px;
+      }
+
+      .options-title {
+        font-size: 14px;
+        font-weight: 500;
+        margin-bottom: 8px;
+        color: #5f6368;
+      }
+
+      .radio-group,
+      .checkbox-group {
+        display: grid;
+        gap: 8px;
+        margin-bottom: 15px;
+      }
+
+      .location-group {
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+        gap: 10px;
+        margin-bottom: 15px;
+      }
+
+      label {
+        display: flex;
+        align-items: center;
+        font-size: 14px;
+        cursor: pointer;
+        padding: 6px;
+        border-radius: 6px;
+        transition: background-color 0.2s;
+        color: #2c2c2c;
+      }
+
+      label:hover {
+        background-color: #edf4fa;
+      }
+
+      input[type="radio"],
+      input[type="checkbox"] {
+        margin-right: 8px;
+        accent-color: #0073b1;
+      }
+
+      .checkbox-label {
+        user-select: none;
+      }
+
+      button {
+        width: 100%;
+        padding: 10px;
+        background-color: #0073b1;
+        color: white;
+        border: none;
+        border-radius: 8px;
+        cursor: pointer;
+        font-size: 14px;
+        font-weight: 600;
+        transition: background-color 0.2s;
+      }
+
+      button:hover {
+        background-color: #004182;
+      }
+
+      .collapsible {
+        cursor: pointer;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 8px;
+        border-radius: 6px;
+        margin-bottom: 8px;
+        background-color: #f6f8fa;
+        color: #2c2c2c;
+      }
+
+      .collapsible:hover {
+        background-color: #edf4fa;
+      }
+
+      .collapsible-content {
+        display: none;
+        padding: 8px;
+      }
+
+      .collapsible-content.active {
+        display: block;
+      }
+
+      .expand-icon {
+        font-size: 12px;
+        transition: transform 0.3s;
+        color: #5f6368;
+      }
+
+      .collapsible.active .expand-icon {
+        transform: rotate(180deg);
+      }
+    </style>
+  </head>
+
+  <body>
+    <h2>LinkedIn Job Filter</h2>
+
+    <div class="search-container">
+      <input type="text" id="jobTitle" placeholder="Enter job title" />
     </div>
-  </div>
 
-  <div class="options-section">
-    <div class="options-title">Time Posted</div>
-    <div class="radio-group">
-      <label><input type="radio" name="time" value="r300" checked> Just Posted</label>
-      <label><input type="radio" name="time" value="r86400"> Past 24 Hours</label>
-      <label><input type="radio" name="time" value="r604800"> Past Week</label>
-    </div>
-  </div>
-
-  <div class="collapsible">
-    <span>Additional Filters</span>
-    <span class="expand-icon">▼</span>
-  </div>
-
-  <div class="collapsible-content">
     <div class="options-section">
-      <div class="options-title">Work Location</div>
-      <div class="checkbox-group">
-        <label class="checkbox-label"><input type="checkbox" name="location" value="remote"> Remote</label>
-        <label class="checkbox-label"><input type="checkbox" name="location" value="onsite"> On-Site</label>
-        <label class="checkbox-label"><input type="checkbox" name="location" value="hybrid"> Hybrid</label>
+      <div class="options-title">Location</div>
+      <div class="location-group">
+        <input type="text" id="location" placeholder="City, State, or Country" />
+        <select id="radius">
+          <option value="10">10mi</option>
+          <option value="25" selected>25mi</option>
+          <option value="50">50mi</option>
+          <option value="100">100mi</option>
+        </select>
       </div>
     </div>
 
     <div class="options-section">
-      <div class="options-title">Experience Level</div>
-      <div class="checkbox-group">
-        <label class="checkbox-label"><input type="checkbox" name="experience" value="1"> Internship</label>
-        <label class="checkbox-label"><input type="checkbox" name="experience" value="2"> Entry Level</label>
-        <label class="checkbox-label"><input type="checkbox" name="experience" value="3"> Associate</label>
-        <label class="checkbox-label"><input type="checkbox" name="experience" value="4"> Mid-Senior Level</label>
-        <label class="checkbox-label"><input type="checkbox" name="experience" value="5"> Director</label>
-        <label class="checkbox-label"><input type="checkbox" name="experience" value="6"> Executive</label>
+      <div class="options-title">Time Posted</div>
+      <div class="radio-group">
+        <label><input type="radio" name="time" value="r8640" checked> Just Posted</label>
+        <label><input type="radio" name="time" value="r86400"> Past 24 Hours</label>
+        <label><input type="radio" name="time" value="r604800"> Past Week</label>
       </div>
     </div>
 
     <div class="options-section">
-      <div class="options-title">Job Type</div>
-      <div class="checkbox-group">
-        <label class="checkbox-label"><input type="checkbox" name="jobType" value="F"> Full-time</label>
-        <label class="checkbox-label"><input type="checkbox" name="jobType" value="P"> Part-time</label>
-        <label class="checkbox-label"><input type="checkbox" name="jobType" value="C"> Contract</label>
-        <label class="checkbox-label"><input type="checkbox" name="jobType" value="T"> Temporary</label>
-        <label class="checkbox-label"><input type="checkbox" name="jobType" value="V"> Volunteer</label>
-        <label class="checkbox-label"><input type="checkbox" name="jobType" value="I"> Internship</label>
-      </div>
-    </div>
-
-    <div class="options-section">
+      <div class="options-title">Apply mode</div>
       <div class="checkbox-group">
         <label class="checkbox-label"><input type="checkbox" id="easyApply"> Easy Apply Only</label>
       </div>
     </div>
-  </div>
 
-  <button id="searchBtn">Search Jobs</button>
-  <script src="popup.js"></script>
-</body>
+    <div class="collapsible">
+      <span>Additional Filters</span>
+      <span class="expand-icon">▼</span>
+    </div>
+
+    <div class="collapsible-content">
+      <div class="options-section">
+        <div class="options-title">Work Location</div>
+        <div class="checkbox-group">
+          <label class="checkbox-label"><input type="checkbox" name="location" value="remote"> Remote</label>
+          <label class="checkbox-label"><input type="checkbox" name="location" value="onsite"> On-Site</label>
+          <label class="checkbox-label"><input type="checkbox" name="location" value="hybrid"> Hybrid</label>
+        </div>
+      </div>
+
+      <div class="options-section">
+        <div class="options-title">Experience Level</div>
+        <div class="checkbox-group">
+          <label class="checkbox-label"><input type="checkbox" name="experience" value="1"> Internship</label>
+          <label class="checkbox-label"><input type="checkbox" name="experience" value="2"> Entry Level</label>
+          <label class="checkbox-label"><input type="checkbox" name="experience" value="3"> Associate</label>
+          <label class="checkbox-label"><input type="checkbox" name="experience" value="4"> Mid-Senior Level</label>
+          <label class="checkbox-label"><input type="checkbox" name="experience" value="5"> Director</label>
+          <label class="checkbox-label"><input type="checkbox" name="experience" value="6"> Executive</label>
+        </div>
+      </div>
+
+      <div class="options-section">
+        <div class="options-title">Job Type</div>
+        <div class="checkbox-group">
+          <label class="checkbox-label"><input type="checkbox" name="jobType" value="F"> Full-time</label>
+          <label class="checkbox-label"><input type="checkbox" name="jobType" value="P"> Part-time</label>
+          <label class="checkbox-label"><input type="checkbox" name="jobType" value="C"> Contract</label>
+          <label class="checkbox-label"><input type="checkbox" name="jobType" value="T"> Temporary</label>
+          <label class="checkbox-label"><input type="checkbox" name="jobType" value="V"> Volunteer</label>
+          <label class="checkbox-label"><input type="checkbox" name="jobType" value="I"> Internship</label>
+        </div>
+      </div>
+
+
+    </div>
+
+    <button id="searchBtn">Search Jobs</button>
+    <script src="popup.js"></script>
+  </body>
+
 </html>
