Added locations with auto complete

--- a/popup.html
+++ b/popup.html
@@ -155,7 +155,7 @@
       <input type="text" id="jobTitle" placeholder="Enter job title" />
     </div>
 
-    <div class="options-section">
+    <!-- <div class="options-section">
       <div class="options-title">Location</div>
       <div class="location-group">
         <input type="text" id="location" placeholder="City, State, or Country" />
@@ -166,7 +166,7 @@
           <option value="100">100mi</option>
         </select>
       </div>
-    </div>
+    </div> -->
 
     <div class="options-section">
       <div class="options-title">Time Posted</div>
