--- a/popup.html
+++ b/popup.html
@@ -6,13 +6,15 @@
     <style>
       body {
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-        padding: 20px;
+        /* padding: 20px; */
+        padding-right: 10px;
+        padding-left: 10px;
         width: 350px;
         background: #f9fafb;
         color: #2c2c2c;
       }
 
-      h2 {
+      h1 {
         font-size: 18px;
         margin-bottom: 15px;
         color: #0073b1;
@@ -149,7 +151,7 @@
   </head>
 
   <body>
-    <h2>LinkedIn Job Filter</h2>
+    <h1 style="text-align: center; color: #0073b1;">LinkedIn Job Filter</h1>
 
     <div class="search-container">
       <input type="text" id="jobTitle" placeholder="Enter job title" />
