--- a/popup.html
+++ b/popup.html
@@ -154,7 +154,8 @@
     <h1 style="text-align: center; color: #0073b1;">LinkedIn Job Filter</h1>
 
     <div class="search-container">
-      <input type="text" id="jobTitle" placeholder="Enter job title" />
+      <input type="text" id=
+      "jobTitle" placeholder="Enter job title" />
     </div>
 
     <!-- <div class="options-section">
