--- a/popup.html
+++ b/popup.html
@@ -154,22 +154,8 @@
     <h1 style="text-align: center; color: #0073b1;">LinkedIn Job Filter</h1>
 
     <div class="search-container">
-      <input type="text" id=
-      "jobTitle" placeholder="Enter job title" />
+      <input type="text" id="jobTitle" placeholder="Enter job title" />
     </div>
-
-    <!-- <div class="options-section">
-      <div class="options-title">Location</div>
-      <div class="location-group">
-        <input type="text" id="location" placeholder="City, State, or Country" />
-        <select id="radius">
-          <option value="10">10mi</option>
-          <option value="25" selected>25mi</option>
-          <option value="50">50mi</option>
-          <option value="100">100mi</option>
-        </select>
-      </div>
-    </div> -->
 
     <div class="options-section">
       <div class="options-title">Time Posted</div>
